# betterDiscoverWeekly

./: README.md
addons/spotifyPlaylistSelector/: binding.gyp
coreApp/: .gitignore
customModules/: README.md
libs/: CMakeLists.txt  README.md
libs/hashedGraph/: CMakeLists.txt
libs/include/: abstractmusicdata.h
